<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setLocationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetLocActivity"
    android:background="@drawable/background">

    <fragment
        android:id="@+id/mapFragment"
        class="com.google.android.gms.maps.MapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/currentLocationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeButton" />

    <EditText
        android:id="@+id/gameAddressEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/new_location_hint"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBaseline_toBaselineOf="@id/placeButton"
        app:layout_constraintEnd_toStartOf="@id/placeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/currentLocationButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:onClick="onPlaceAtMe"
        android:text="@string/my_location_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/confirmButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:onClick="onConfirm"
        android:text="@string/confirm_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/currentLocationButton" />

    <Button
        android:id="@+id/placeButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:onClick="onPlace"
        android:text="@string/place_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>