<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        >


        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <fragment
            android:id="@+id/mapFragment"
            class="com.google.android.gms.maps.MapFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@id/fullOrNot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <TextView
            android:id="@+id/fullOrNot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Game is Full"
            android:textColor="#F44336"
            app:layout_constraintBottom_toTopOf="@id/playersInGame"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/playersInGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="There are 4 confirmed players total for a 5 person game"
            app:layout_constraintBottom_toTopOf="@id/joinTheGame"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/joinTheGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Let them know you're coming!"
            app:layout_constraintBottom_toTopOf="@id/addToGame"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/addToGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onConfirmAttendance"
            android:text="Confirm Attendance"
            app:layout_constraintBottom_toTopOf="@id/navigateButton"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/navigateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onNavigate"
            android:text="@string/navigate_text"
            app:layout_constraintBottom_toTopOf="@id/typeTextView"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/descriptionLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/description_label"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/descriptionTextView" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/descriptionLabelTextView" />

        <TextView
            android:id="@+id/typeLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/type_label"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/descriptionLabelTextView"
            app:layout_constraintTop_toTopOf="@id/typeTextView" />

        <TextView
            android:id="@+id/typeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/descriptionTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/descriptionLabelTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>